--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -251,3 +252,329 @@ footer {
         font-size: 2rem;
     }
 }
+
+
+
+
+
+/*Running Test to Evaluate Tactical Code
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+Running Test to Evaluate Tactical Code*/
+
+/* HTML5 display-role reset for older browsers */
+
+
+/*Running Test to Evaluate Tactical Code
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    max-width: 1920px;
+    min-width: 428px;
+    width: 100%;
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5, h6, p, a, i {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 7.5rem;
+}
+
+h2 {
+    font-size: 6rem;
+}
+
+h3 {
+    font-size: 5rem;
+}
+
+p, a {
+    font-size: 3rem;
+}
+Running Test to Evaluate Tactical Code*/
+
+
+
+
+/* header section */
+
+
+
+
+/*Running Test to Evaluate Tactical Code
+header {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/home-header.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+Running Test to Evaluate Tactical Code*/
+
+
+
+
+
+/* spacers */
+
+
+/*Running Test to Evaluate Tactical Code
+.spacer {
+    width: 100%;
+    height: 20vh;
+    background-color: rgb(0, 4, 17);
+}
+.spacer-sm {
+    width: 100%;
+    height: 10vh;
+    background-color: rgb(0, 4, 17);
+}
+
+
+Running Test to Evaluate Tactical Code*/
+
+/* gallery section */
+
+
+/*Running Test to Evaluate Tactical Code
+.gallery {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    background-color: rgb(0, 4, 17);
+}
+
+Running Test to Evaluate Tactical Code*/
+
+/* about us section */
+
+
+/*Running Test to Evaluate Tactical Code
+.about {
+    width: 100%;
+    height: 75vh;
+    text-align: center;
+    background-image: url("../img/staff-cooks.jpg");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
+.about-container {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 4, 17, .8);
+}
+
+.about h2 {
+    width: 100%;
+}
+
+.about-container .text {
+    width: 50%;
+}
+
+
+
+Running Test to Evaluate Tactical Code*/
+
+
+
+
+/* contact us section */
+
+/*Running Test to Evaluate Tactical Code
+.contact {
+    text-align: center;
+    background-image: url("../img/jumbo-restaurant.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgb(0, 4, 17);
+}
+
+.contact-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 4, 17, .8);
+}
+
+.contact h2 {
+    padding-top: 5vh;
+}
+
+.contact h3 {
+    padding-top: 2.5vh;
+}
+
+.contact p {
+    padding: .5vh 0;
+}
+
+.info {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.address {
+    width: 25%;
+}
+
+.hours {
+    width: 25%;
+    padding-bottom: 2.5vh;
+}
+
+.contacts {
+    width: 25%;
+}
+Running Test to Evaluate Tactical Code*/
+
+
+
+/* footer section */
+
+
+/*Running Test to Evaluate Tactical Code
+footer {
+    width: 100%;
+    height: 15vh;
+    padding-top: 2.5vh;
+    font-size: 3rem;
+}
+
+Running Test to Evaluate Tactical Code*/
+
+/* mobile media query */
+
+
+/*Running Test to Evaluate Tactical Code
+@media (max-width: 428px) {
+
+
+Running Test to Evaluate Tactical Code*/
+
+    /* header section */
+    
+
+    /* gallery section */
+
+
+/*Running Test to Evaluate Tactical Code
+    .gallery {
+        height: auto;
+    }
+
+    
+Running Test to Evaluate Tactical Code*/
+    /* about us section */
+
+
+/*Running Test to Evaluate Tactical Code
+    .about {
+        height: 200vh;
+    }
+    
+    .about h2 {
+        width: 100%;
+        padding-top: 5vh;
+    }
+    
+    .about-container .text {
+        width: 85%;
+    }
+Running Test to Evaluate Tactical Code*/
+
+
+    /* contact us section */
+
+/*Running Test to Evaluate Tactical Code
+    .contact h3 {
+        padding-top: 2.5vh;
+    }
+    
+    .info {
+        flex-wrap: wrap;
+    }
+    
+    .address {
+        width: 100%;
+        padding-bottom: 2.5vh;
+    }
+    
+    .hours {
+        width: 100%;
+    }
+    
+    .contacts {
+        width: 100%;
+        padding-bottom: 2.5vh;
+    }
+Running Test to Evaluate Tactical Code*/
+    /* footer section */
+
+/*Running Test to Evaluate Tactical Code
+    footer {
+        height: auto;
+        padding-top: 2.5vh;
+        font-size: 2rem;
+    }
+}
+
+Running Test to Evaluate Tactical Code*/
